--- a/platform/cc2540mini/Makefile.cc2540mini
+++ b/platform/cc2540mini/Makefile.cc2540mini
@@ -2,10 +2,11 @@ ifndef CONTIKI
   $(error CONTIKI not defined! You must specify where CONTIKI resides!)
 endif
 
-CONTIKI_TARGET_DIRS = .
+CONTIKI_TARGET_DIRS = . dev
 CONTIKI_TARGET_MAIN = $(addprefix $(OBJECTDIR)/,contiki-main.rel)
 
 CONTIKI_TARGET_SOURCEFILES = contiki-main.c
+CONTIKI_TARGET_SOURCEFILES += leds.c leds-arch.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
