--- a/platform/cc2540mini/Makefile.cc2540mini
+++ b/platform/cc2540mini/Makefile.cc2540mini
@@ -7,6 +7,7 @@ CONTIKI_TARGET_MAIN = $(addprefix $(OBJECTDIR)/,contiki-main.rel)
 
 CONTIKI_TARGET_SOURCEFILES = contiki-main.c
 CONTIKI_TARGET_SOURCEFILES += leds.c leds-arch.c
+CONTIKI_TARGET_SOURCEFILES += putchar.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
