cc253x: Move cc253x and cc2540 common part
This patch moves cc253x and cc2540 common parts together in cpu/cc25xx.

Signed-off-by: Andre Guedes <andre.guedes@openbossa.org>

--- a/platform/cc2530dk/Makefile.cc2530dk
+++ b/platform/cc2530dk/Makefile.cc2530dk
@@ -50,5 +50,5 @@ sensinode.serialdump:
 	$(SERIALDUMP)
 
 ### Define the CPU directory
-CONTIKI_CPU=$(CONTIKI)/cpu/cc253x
+CONTIKI_CPU=$(CONTIKI)/cpu/cc25xx/cc253x
 include $(CONTIKI_CPU)/Makefile.cc253x
