--- a/cpu/cc25xx/common/Makefile.common
+++ b/cpu/cc25xx/common/Makefile.common
@@ -26,6 +26,12 @@ ASFLAGS += -plosgff
 
 AROPTS   = -a
 
+CONTIKI_CPU_DIRS += ../common
+
+CONTIKI_SOURCEFILES += rtimer-arch.c
+CONTIKI_SOURCEFILES += soc.c
+CONTIKI_SOURCEFILES += clock.c
+
 ### Our object files are .rel, so we can't use the default finalize dependency
 ### generation. Override here.
 define FINALIZE_SDCC_DEPENDENCY
@@ -96,20 +102,6 @@ endif
 CLEAN += *.lnk *.lk *.sym *.lib *.ihx *.rel *.mem *.rst *.asm *.hex
 CLEAN += *.omf *.cdb *.banks *.flags *.banked-hex
 CLEAN += symbols.c symbols.h
-
-### CPU-dependent directories
-CONTIKI_CPU_DIRS = . dev
-
-### CPU-dependent source files
-CONTIKI_SOURCEFILES += soc.c clock.c stack.c
-CONTIKI_SOURCEFILES += uart0.c uart1.c uart-intr.c
-CONTIKI_SOURCEFILES += dma.c dma_intr.c
-CONTIKI_SOURCEFILES += cc2530-rf.c
-CONTIKI_SOURCEFILES += watchdog.c rtimer-arch.c
-CONTIKI_SOURCEFILES += port2-intr.c port2.c
-CONTIKI_ASMFILES +=
-
-include $(CONTIKI_CPU)/usb/Makefile.usb
 
 CONTIKI_SOURCEFILES += $(USB_SOURCEFILES)
 
